--- a/quiz-client/src/components/AnswerButton/AnswerButton.css
+++ b/quiz-client/src/components/AnswerButton/AnswerButton.css
@@ -4,6 +4,7 @@
     background: transparent;
     border: 1px solid #1e1e1e;
     cursor: pointer;
+    position: relative;
   }
   
   /* styling for our variants */
