--- a/quiz-client/src/components/AnswerButton/AnswerButton.css
+++ b/quiz-client/src/components/AnswerButton/AnswerButton.css
@@ -1,25 +1,44 @@
 /* base styling for our button */
 .btn {
-    padding: 0.6rem 1rem;
-    background: transparent;
-    border: 1px solid #1e1e1e;
+    border: 2px solid black;
+    background-color: white;
+    color: black;
+    padding: 14px 28px;
+    font-size: 16px;
     cursor: pointer;
-    position: relative;
-  }
+    margin: 0 auto;
+    display: block;
+    margin-top: 2%;
+    border-color: 2px solid black;
+    border-radius: 20px 20px 20px 20px;
+    width: 90%;
+}
+
+/* Green */
+.select {
+  border-color: #04AA6D;
+  color: green;
+}
+
+.select:hover {
+  background-color: #04AA6D;
+  color: white;
+}
+
   
-  /* styling for our variants */
-  .btn-primary {
-    border: none;
-    background-color: blue;
-    color: white;
-  }
-  .btn-danger {
-    border: none;
-    background-color: red;
-    color: white;
-  }
-  
-  /* styling for different shape*/
-  .btn-rounded {
-    border-radius: 0.4rem;
-  }
+/* styling for our variants */
+.btn-primary {
+  /* border: none; */
+  background-color: blue;
+  color: white;
+}
+.btn-danger {
+  /* border: none; */
+  background-color: red;
+  color: white;
+}
+
+/* styling for different shape*/
+.btn-rounded {
+  /* border-radius: 0.4rem; */
+}
