--- a/quiz-client/src/components/QuestionCard/QuestionCard.css
+++ b/quiz-client/src/components/QuestionCard/QuestionCard.css
@@ -1,8 +1,10 @@
 .questioncard {
     /* width: 750px;
     height: 1334px; */
-    width: 325px;
-    height: 667px;
+    width: 90%;
+    height: 90%;
+    top: 5%;
+    right: 5%;
     max-width: 100%;
     max-height: 100%;
     background-color: white;
@@ -11,9 +13,16 @@
     position: absolute;
     border: 2px solid black;
 }
-.element {
+.qc_question {
     background-color: blue;
     top: 10px;
     position: relative;
 }
 
+.qc_answers {
+    background-color: green;
+    top: 10%;
+    position: relative;
+    /* height: 200px; */
+    border: 3px solid green;    
+}
