--- a/quiz-client/src/components/QuestionCard/QuestionCard.css
+++ b/quiz-client/src/components/QuestionCard/QuestionCard.css
@@ -1,28 +1,28 @@
 .questioncard {
+    /* display: block; */
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    width: 90vw;
+    height: 85vh;
     /* width: 750px;
     height: 1334px; */
-    width: 90%;
-    height: 90%;
-    top: 5%;
-    right: 5%;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 325px;
+    max-height: 667px;
     background-color: white;
     border-radius: 20px 20px 20px 20px;
+
     overflow: hidden;
-    position: absolute;
     border: 2px solid black;
 }
 .qc_question {
-    background-color: blue;
+    background-color: white;
     top: 10px;
     position: relative;
 }
 
 .qc_answers {
-    background-color: green;
-    top: 10%;
+    background-color: grey;
+    top: 5%;
     position: relative;
-    /* height: 200px; */
-    border: 3px solid green;    
 }
