--- a/quiz-client/src/components/AnswerButton/AnswerButton.css
+++ b/quiz-client/src/components/AnswerButton/AnswerButton.css
@@ -14,6 +14,36 @@
     width: 90%;
 }
 
+.btn-answered {
+  border: 10px solid black;
+  background-color: white;
+  color: black;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  margin: 0 auto;
+  display: block;
+  margin-top: 5%;
+  border-color: 2px solid black;
+  border-radius: 20px 20px 20px 20px;
+  width: 90%;
+}
+
+.btn-answered2 {
+  border: 20px solid black;
+  background-color: white;
+  color: black;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  margin: 0 auto;
+  display: block;
+  margin-top: 5%;
+  border-color: 2px solid black;
+  border-radius: 20px 20px 20px 20px;
+  width: 90%;
+}
+
 .select {
   border-color: #04AA6D;
   color: green;
